# p2p-network-visualizer

./: Cargo.toml
src/: api.rs  control.rs  gui_control.rs  lib.rs  main.rs  models.rs  nff_utils.rs  parser.rs
src/api/: node_attributes_api.rs  node_status_api.rs  tcp_api.rs  web_api.rs
src/control/: gui_control.rs
src/gui_control/: adding_link.rs  adding_node.rs  deleting_link.rs  deleting_node.rs  editing_node.rs  painter.rs
src/nff_utils/: gexf_parser.rs  gexf_saver.rs  graphml_parser.rs  graphml_saver.rs
src/parser/: graphml_parser.rs
